# slot-attention-pytorch

./: README.md  pyproject.toml
slot_attention/: encoder_decoder.py  model.py  nn_utils.py  positional_embedding.py  slot_attention_module.py
slot_attention/config/: slot_attention-clevr.yaml  slot_attention.yaml
slot_attention/shared/: encoder_decoder.py  sequential_cnn.py
slot_attention_pytorch/: encoder_decoder.py  model.py  paths.py
slot_attention_pytorch/config/: slot_attention-clevr.yaml  slot_attention.yaml
slot_attention_pytorch/shared/: encoder_decoder.py  sequential_cnn.py
tests/: test_instantiate.py  test_instantiate_slot_attention.py  test_predict.py
