[tool.poetry]
name = "slot-attention"
version = "0.1.0"
description = ""
authors = ["mikedev <mik3dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
hydra-core = "^1.2.0"
path = "^16.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

